# prooflayer

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  REPORT.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.rocm  conftest.py  railway.toml  start.sh
backend/analyzers/: _device.py  admin.py  aggregator.py  apps.py  base.py  models.py  registry.py  serializers.py  tasks.py  urls.py  views.py
backend/api/: admin.py  models.py  system_views.py  tasks.py
backend/billing/: models.py  serializers.py  urls.py  views.py
backend/common/: throttling.py  url_safety.py
backend/config/: asgi.py  celery.py  urls.py
backend/content/: admin.py  consumers.py  models.py  pdf.py  routing.py  serializers.py  services.py  storage_utils.py  tasks.py  throttles.py  urls.py  validators.py  views.py  ws_auth.py
backend/crowdsource/: admin.py  apps.py  models.py  serializers.py  urls.py  (+1 more)
deploy/: README.md  caddy.snippet  cf-tunnel-setup.sh  cloudflared.ingress.snippet  compose.prod.yml  deploy.sh  deploy.toml.example  env.prod.example  server-bootstrap.sh
extension/: .gitignore  build-icons.mjs  manifest.firefox.json  manifest.json  package.json  tsconfig.json  vite.config.ts
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: download_ai_dataset.py  download_hf_models.py  download_real_dataset.py  fetch_demo_samples.py  generate_gemini_dataset.py  sync_github_wiki.py
wiki/: architecture.md  hot.md  index.md  log.md  overview.md
(+252 files in other folders)
